Update packaging files for SSP 0.9

--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -9,6 +9,7 @@ Homepage: http://ltb-project.org/wiki/documentation/self-service-password
 
 Package: self-service-password
 Depends: php5, php5-ldap
+Recommends: php5-mcrypt
 Architecture: all
 Description: LDAP password change web interface
  Self Service Password is a simple PHP application that allows users to change their password on an LDAP directory.
