--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+
 php:
   - '5.4'
   - '5.5'
@@ -6,3 +7,8 @@ php:
   - '7.0'
   - hhvm
   - nightly
+
+script: phpunit tests
+
+notifications:
+  irc: "irc.freenode.org#ltb-project"
