Possibility to set output_buffering in Apache cnfiguration (#128)

--- a/packaging/rpm/SOURCES/self-service-password-apache.conf
+++ b/packaging/rpm/SOURCES/self-service-password-apache.conf
@@ -6,6 +6,9 @@
 
         AddDefaultCharset UTF-8
 
+        # Force PHP output buffering
+        #php_value output_buffering 4096
+
         <Directory /usr/share/self-service-password>
             AllowOverride None
             <IfVersion >= 2.3>
