--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ php:
   - '7.1'
 
 before_install:
+  - composer self-update
   # If PHP >= 7.0, force use of PHPUnit 5.7
   - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.0', '>=' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar && chmod +x ~/bin/phpunit; fi
+
+install:
+  - composer install
 
 script: phpunit
 
