--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,16 @@
     "phpmailer/phpmailer": "~5.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.*"
+    "phpunit/phpunit": "4.8.*"
   },
   "autoload": {
     "psr-4": {
       "App\\": "src/"
+    }
+  },
+  "config": {
+    "platform": {
+      "php": "5.4.26"
     }
   },
   "autoload-dev": {
