--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "defuse/php-encryption": "~2.0",
     "google/recaptcha": "~1.1",
     "psr/container": "~1.0",
+    "psr/log": "~1.0",
     "phpmailer/phpmailer": "~5.2"
   },
   "require-dev": {
