--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "psr/container": "~1.0",
     "psr/log": "~1.0",
     "phpmailer/phpmailer": "~5.2",
-    "symfony/http-foundation": "~2.8"
+    "symfony/http-foundation": "~2.8",
+    "symfony/event-dispatcher": "~2.8"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
