--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "symfony/event-dispatcher": "~2.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.*"
+    "phpunit/phpunit": "4.8.*",
+    "squizlabs/php_codesniffer": "3.*",
+    "escapestudios/symfony2-coding-standard": "3.x-dev"
   },
   "autoload": {
     "psr-4": {
