Deny access to scripts

--- a/packaging/debian/conf/self-service-password.conf
+++ b/packaging/debian/conf/self-service-password.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
-	ServerName ssp.example.com
+    ServerName ssp.example.com
 
-	DocumentRoot /usr/share/self-service-password
-	DirectoryIndex index.php
+    DocumentRoot /usr/share/self-service-password
+    DirectoryIndex index.php
 
-	AddDefaultCharset UTF-8
+    AddDefaultCharset UTF-8
 
     <Directory /usr/share/self-service-password>
         AllowOverride None
@@ -17,7 +17,18 @@
         </IfVersion>
     </Directory>
 
-	LogLevel warn
-	ErrorLog /var/log/apache2/ssp_error.log
-	CustomLog /var/log/apache2/ssp_access.log combined
+    <Directory /usr/share/self-service-password/scripts>
+        AllowOverride None
+        <IfVersion >= 2.3>
+            Require all denied
+        </IfVersion>
+        <IfVersion < 2.3>
+            Order Deny,Allow
+            Deny from all
+        </IfVersion>
+    </Directory>
+
+    LogLevel warn
+    ErrorLog /var/log/apache2/ssp_error.log
+    CustomLog /var/log/apache2/ssp_access.log combined
 </VirtualHost>
