--- a/packaging/rpm/SOURCES/self-service-password-apache.conf
+++ b/packaging/rpm/SOURCES/self-service-password-apache.conf
@@ -17,6 +17,17 @@
             </IfVersion>
         </Directory>
 
+        <Directory /usr/share/self-service-password/scripts>
+            AllowOverride None
+            <IfVersion >= 2.3>
+                Require all denied
+            </IfVersion>
+            <IfVersion < 2.3>
+                Order Deny,Allow
+                Deny from all
+            </IfVersion>
+        </Directory>
+
         LogLevel warn
         ErrorLog /var/log/httpd/ssp_error_log
         CustomLog /var/log/httpd/ssp_access_log combined
