--- a/lib/composer.json
+++ b/lib/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "gregwar/captcha": "^1.1"
+        "gregwar/captcha": "^1.1",
+        "phpmailer/phpmailer": "^6.3"
     }
 }
