Adapt Debian packaging to Smarty (#109)

--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.3
 Homepage: http://ltb-project.org/wiki/documentation/self-service-password
 
 Package: self-service-password
-Depends: php5|php, php5-ldap|php-ldap
+Depends: php5|php, php5-ldap|php-ldap, smarty3
 Recommends: php5-mcrypt|php-mcrypt
 Architecture: all
 Description: LDAP password change web interface
