Manage cache dirs in Debian packaging (#724)

--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -6,3 +6,11 @@ export DH_COMPAT=7
 %:
 	dh $@
 
+override_dh_install:
+	dh_install
+	debian/replace_cache_dirs
+
+override_dh_fixperms:
+	dh_fixperms
+	chown www-data:www-data debian/self-service-password/var/cache/self-service-password/cache
+	chown www-data:www-data debian/self-service-password/var/cache/self-service-password/templates_c
