Apache configuration for new webservices in packaging files (#447)

--- a/packaging/debian/conf/self-service-password.conf
+++ b/packaging/debian/conf/self-service-password.conf
@@ -17,6 +17,19 @@
         </IfVersion>
     </Directory>
 
+    Alias /rest /usr/share/self-service-password/rest
+
+    <Directory /usr/share/self-service-password/rest>
+        AllowOverride None
+        <IfVersion >= 2.3>
+            Require all denied
+        </IfVersion>
+        <IfVersion < 2.3>
+            Order Deny,Allow
+            Deny from all
+        </IfVersion>
+    </Directory>
+
     LogLevel warn
     ErrorLog /var/log/apache2/ssp_error.log
     CustomLog /var/log/apache2/ssp_access.log combined
