Use *:80 virtual host

--- a/packaging/rpm/SOURCES/self-service-password-apache.conf
+++ b/packaging/rpm/SOURCES/self-service-password-apache.conf
@@ -1,4 +1,4 @@
-<VirtualHost *>
+<VirtualHost *:80>
         ServerName ssp.example.com
 
         DocumentRoot /usr/share/self-service-password/htdocs
