--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -21,6 +21,7 @@ RUN buildDeps=" \
         libzip-dev \
 	locales \
 	locales-all \
+	sendmail \
     " \
     && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y $buildDeps $runtimeDeps \
     && docker-php-ext-install bcmath bz2 iconv intl mbstring opcache curl \
