--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: php
 
-dist: trusty
+os:
+  - linux
+
+
+dist:
+  - Focal
+  - Bionic
+  - Xenial
+  - Trusty
+  - Precise
 
 php:
   - '5.4'
@@ -9,13 +18,21 @@ php:
   - '7.0'
   - '7.1'
   - '7.2'
+  - '7.3'
   - '7.4'
+  - '8.0'
 
 before_install:
   # If PHP >= 7.0, force use of PHPUnit 5.7
-  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.0', '>=' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar && chmod +x ~/bin/phpunit; fi
+
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '5.4', '5.5' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-4.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '5.6', '5.6' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.0', '7.0' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-6.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.1', '7.1' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-7.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.2', '7.2' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-8.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.3', '>=' ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-9.phar && chmod +x ~/bin/phpunit; fi
 
 script: phpunit tests
 
-notifications:
-  irc: "irc.freenode.org#ltb-project"
+#notifications:
+#  irc: "irc.freenode.org#ltb-project"
