Changed to Support newer version of PHPUnit test, Changed to use multiple Ubuntu build enviroments

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,20 @@ os:
 
 
 dist:
-  - Focal
-  - Bionic
-  - Xenial
-  - Trusty
-  - Precise
+  "Focal"
+  "Bionic"
+  "Xenial"
+  "Trusty"
+  "Precise"
+
+matrix:
+  include:
+  - dist: bionic
+  - dist: focal
+  - dist: precise
+  - dist: trusty
+  - dist: xenial
+
 
 php:
   - '5.4'
