--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,69 @@ language: php
 os:
   - linux
 
+dist: focal
+
 matrix:
     include:
-        - dist: trusty
-        - dist: xenial
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
+          dist: trusty
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
+          dist: xenial
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
         - dist: bionic
-        - dist: focal
-        - dist: precise
-
-php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
-  - '7.0'
-  - '7.1'
-  - '7.2'
-  - '7.3'
-  - '7.4'
-  - '8.0'
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
+          dist: focal
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
+          dist: precise
+        - php: '5.4'
+        - php: '5.5'
+        - php: '5.6'
+        - php: '7.0'
+        - php: '7.1'
+        - php: '7.2'
+        - php: '7.3'
+        - php: '7.4'
+        - php: '8.0'
 
 before_install:
   # If PHP >= 7.0, force use of PHPUnit 5.7
