--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ language: php
 os:
   - linux
 
-dist: focal
-
 matrix:
     include:
+        - dist: trusty
         - php: '5.4'
         - php: '5.5'
         - php: '5.6'
@@ -16,7 +15,7 @@ matrix:
         - php: '7.3'
         - php: '7.4'
         - php: '8.0'
-          dist: trusty
+        - dist: trusty
         - php: '5.4'
         - php: '5.5'
         - php: '5.6'
@@ -26,7 +25,7 @@ matrix:
         - php: '7.3'
         - php: '7.4'
         - php: '8.0'
-          dist: xenial
+        - dist: xenial
         - php: '5.4'
         - php: '5.5'
         - php: '5.6'
@@ -46,7 +45,7 @@ matrix:
         - php: '7.3'
         - php: '7.4'
         - php: '8.0'
-          dist: focal
+        - dist: focal
         - php: '5.4'
         - php: '5.5'
         - php: '5.6'
@@ -56,7 +55,7 @@ matrix:
         - php: '7.3'
         - php: '7.4'
         - php: '8.0'
-          dist: precise
+        - dist: precise
         - php: '5.4'
         - php: '5.5'
         - php: '5.6'
