--- a/.travis.yml
+++ b/.travis.yml
@@ -3,68 +3,105 @@ language: php
 os:
   - linux
 
-matrix:
+dist: focal
+
+jobs:
+
     include:
-        - dist: trusty
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
-        - dist: trusty
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
-        - dist: xenial
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
-        - dist: bionic
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
         - dist: focal
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
+          php: '5.4'
+        - dist: focal
+          php: '5.5'
+        - dist: focal
+          php: '5.6'
+        - dist: focal
+          php: '7.0'
+        - dist: focal
+          php: '7.1'
+        - dist: focal
+          php: '7.2'
+        - dist: focal
+          php: '7.3'
+        - dist: focal
+          php: '7.4'
+        - dist: focal
+          php: '8.0'
+
+        - dist: bionic
+          php: '5.4'
+        - dist: bionic
+          php: '5.5'
+        - dist: bionic
+          php: '5.6'
+        - dist: bionic
+          php: '7.0'
+        - dist: bionic
+          php: '7.1'
+        - dist: bionic
+          php: '7.2'
+        - dist: bionic
+          php: '7.3'
+        - dist: bionic
+          php: '7.4'
+        - dist: bionic
+          php: '8.0'
+
+        - dist: xenial
+          php: '5.4'
+        - dist: xenial
+          php: '5.5'
+        - dist: xenial
+          php: '5.6'
+        - dist: xenial
+          php: '7.0'
+        - dist: xenial
+          php: '7.1'
+        - dist: xenial
+          php: '7.2'
+        - dist: xenial
+          php: '7.3'
+        - dist: xenial
+          php: '7.4'
+        - dist: xenial
+          php: '8.0'
+
+        - dist: trusty
+          php: '5.4'
+        - dist: trusty
+          php: '5.5'
+        - dist: trusty
+          php: '5.6'
+        - dist: trusty
+          php: '7.0'
+        - dist: trusty
+          php: '7.1'
+        - dist: trusty
+          php: '7.2'
+        - dist: trusty
+          php: '7.3'
+        - dist: trusty
+          php: '7.4'
+        - dist: trusty
+          php: '8.0'
+
         - dist: precise
-        - php: '5.4'
-        - php: '5.5'
-        - php: '5.6'
-        - php: '7.0'
-        - php: '7.1'
-        - php: '7.2'
-        - php: '7.3'
-        - php: '7.4'
-        - php: '8.0'
+          php: '5.4'
+        - dist: precise
+          php: '5.5'
+        - dist: precise
+          php: '5.6'
+        - dist: precise
+          php: '7.0'
+        - dist: precise
+          php: '7.1'
+        - dist: precise
+          php: '7.2'
+        - dist: precise
+          php: '7.3'
+        - dist: precise
+          php: '7.4'
+        - dist: precise
+          php: '8.0'
 
 before_install:
   # If PHP >= 7.0, force use of PHPUnit 5.7
