--- a/.travis.yml
+++ b/.travis.yml
@@ -105,12 +105,12 @@ jobs:
 
 before_install:
   # If PHP >= 7.0, force use of PHPUnit 5.7
-  - if php -r "exit((version_compare($TRAVIS_PHP_VERSION, '5.4.0') >= 0) and (version_compare($TRAVIS_PHP_VERSION, '5.6.0') <= 0)));"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-4.phar and chmod +x ~/bin/phpunit; fi
-  - if php -r "exit((version_compare($TRAVIS_PHP_VERSION, '5.6.0') >= 0) and (version_compare($TRAVIS_PHP_VERSION, '7.0.0') <= 0)));"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.phar and chmod +x ~/bin/phpunit; fi
-  - if php -r "exit((version_compare($TRAVIS_PHP_VERSION, '7.0.0') >= 0) and (version_compare($TRAVIS_PHP_VERSION, '7.1.0') <= 0)));"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-6.phar and chmod +x ~/bin/phpunit; fi
-  - if php -r "exit((version_compare($TRAVIS_PHP_VERSION, '7.1.0') >= 0) and (version_compare($TRAVIS_PHP_VERSION, '7.2.0') <= 0)));"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-7.phar and chmod +x ~/bin/phpunit; fi
-  - if php -r "exit((version_compare($TRAVIS_PHP_VERSION, '7.2.0') >= 0) and (version_compare($TRAVIS_PHP_VERSION, '7.3.0') <= 0)));"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-8.phar and chmod +x ~/bin/phpunit; fi
-  - if php -r "exit(version_compare($TRAVIS_PHP_VERSION, '7.3.0') >= 0);"; then mkdir -p ~/bin and wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-9.phar and chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! (version_compare( '$TRAVIS_PHP_VERSION', '5.4.0' ) >= 0 ) and (version_compare( '$TRAVIS_PHP_VERSION', '5.6.0' ) <= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-4.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '5.6.0' ) >= 0 ) and (version_compare( '$TRAVIS_PHP_VERSION', '7.0.0' ) <= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.0.0' ) >= 0 ) and (version_compare( '$TRAVIS_PHP_VERSION', '7.1.0' ) <= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-6.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.1.0 ) >= 0 ) and (version_compare( '$TRAVIS_PHP_VERSION', '7.2.0' ) <= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-7.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.2.0' ) >= 0 ) and (version_compare( '$TRAVIS_PHP_VERSION', '7.3.0' ) <= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-8.phar && chmod +x ~/bin/phpunit; fi
+  - if php -r "exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '7.3.0' ) >= 0 );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-9.phar && chmod +x ~/bin/phpunit; fi
 
 script: 
  phpunit tests
