--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ jobs:
 #          php: '5.5'
 #        - dist: bionic
 #          php: '5.6'
-        - dist: bionic
-          php: '7.0'
+#        - dist: bionic
+#          php: '7.0'
         - dist: bionic
           php: '7.1'
         - dist: bionic
@@ -102,15 +102,6 @@ jobs:
 #          php: '7.4'
 #        - dist: precise
 #          php: '8.0'
-
-before_install:
-  # If PHP >= 7.0, force use of PHPUnit 5.7
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '5.4.0' ) >= 0 ) and (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '5.6.0' ) <= 0 ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-4.phar && chmod +x ~/bin/phpunit; fi
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '5.6.0' ) >= 0 ) and (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.0.0' ) <= 0 ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-5.phar && chmod +x ~/bin/phpunit; fi
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.0.0' ) >= 0 ) and (version_compare( '${TRAVIS_PHP_VERSION:0:5}'', '7.1.0' ) <= 0 ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-6.phar && chmod +x ~/bin/phpunit; fi
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.1.0 ) >= 0 ) and (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.2.0' ) <= 0 ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-7.phar && chmod +x ~/bin/phpunit; fi
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.2.0' ) >= 0 ) and (version_compare( '${TRAVIS_PHP_VERSION:0:5}, '7.3.0' ) <= 0 ) );"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-8.phar && chmod +x ~/bin/phpunit; fi
-  - if php -r "exit( (int)! (version_compare( '${TRAVIS_PHP_VERSION:0:5}', '7.3.0' ) >= 0 ));"; then mkdir -p ~/bin && wget -O ~/bin/phpunit https://phar.phpunit.de/phpunit-9.phar && chmod +x ~/bin/phpunit; fi
 
 script: 
  phpunit tests
