--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,10 +16,12 @@ jobs:
         php-versions: ['5.3', '5.4', '5.5', '5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
         
     steps:
-    - uses: actions/checkout@v1
-    
-    - name: PHPUnit Tests
-      uses: xgamer/phpunit-action@master
-      with:
-        command: tests/
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version:  ${{ matrix.php-versions }}
+
     
