--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN buildDeps=" \
         libonig-dev \
     " \
     runtimeDeps=" \
-	apache2/buster-backports \
+	apache2 \
         curl \
         libicu-dev \
         libldap2-dev \
@@ -24,7 +24,6 @@ RUN buildDeps=" \
 	locales-all \
 	sendmail \
     " \
-    && echo deb http://deb.debian.org/debian buster-backports main >>/etc/apt/sources.list \
     && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y $buildDeps $runtimeDeps \
     && docker-php-ext-install bcmath bz2 iconv intl mbstring opcache curl \
     && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
