Force xz compression to manage package with aptly current version (see https://github.com/aptly-dev/aptly/issues/989#issuecomment-960618575)

--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -14,3 +14,6 @@ override_dh_fixperms:
 	dh_fixperms
 	chown www-data:www-data debian/self-service-password/var/cache/self-service-password/cache
 	chown www-data:www-data debian/self-service-password/var/cache/self-service-password/templates_c
+
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
