Explicit libldap-common dependency for docker

--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -13,6 +13,7 @@ RUN buildDeps=" \
     runtimeDeps=" \
         curl \
         libicu-dev \
+        libldap-common \
         libldap2-dev \
 	libgd3 \
 	libjpeg62-turbo \
