go on checkentropy feature (work-in-progress) (#830)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "ltb-project/ldap": "v0.1.0",
+        "bjeavons/zxcvbn-php": "^1.0",
         "twbs/bootstrap": "v5.3.2"
     },
     "scripts": {
