add composer update action in github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install dependencies
+      uses: php-actions/composer@v6
+      with:
+        php_version: 7.4
+        command: update
+        php_extensions: ldap
     - name: PHPUnit Tests for php7.4
       uses: php-actions/phpunit@v3
       with:
