fix smsTwilioTest for php7 + set minimum version requirement for phpunit + mockery (#889)

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": ">=8",
         "php-mock/php-mock-phpunit": "*",
-        "mockery/mockery": "*"
+        "mockery/mockery": ">=1.4"
     }
 }
