Set composer compatibility with PHP 7.4 (#897)

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
         "phpunit/phpunit": ">=8",
         "php-mock/php-mock-phpunit": "*",
         "mockery/mockery": ">=1.4"
+    },
+    "config": {
+        "platform": {
+            "php": "7.4"
+        }
     }
 }
